Added more lesson 4 content

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 				</div>
 				<div class="cloneterminalexplain">
 					<h3>How to clone an online repository to your personal computer</h3>
-					<p></p>
+					<p>As you likely have noted on the right, the example I have provided demonstrates the steps necessary in order to clone the repository in which this website is stored.</p>
 				</div>
 			</div>
 		</div>
