Mostly finished with lesson 4, working on lesson 5

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 	</div>
 
 	<div class="lesson4 lessons" id="lesson4">
-		<div class="lessonparameter">
+		<div class="lessonparameter2">
 			<h2>4</h2>
 			<h3>Cloning the Repository</h3>
 			<p>(Create on the Github website)</p>
@@ -255,8 +255,14 @@
 				</div>
 				<div class="cloneterminalexplain">
 					<h3>How to clone an online repository to your personal computer</h3>
-					<p>As you likely have noted on the right, the example I have provided demonstrates the steps necessary in order to clone the repository in which this website is stored.</p>
+					<p>As you likely have noted on the right, the example I have provided demonstrates the steps necessary in order to clone the repository in which this website is stored. See below.</p>
 				</div>
+				<div class="cloneterminalexplain cloneterminalexplain2">
+					<p>In order to sucessfully clone a repository, follow these steps:</p>
+					<p>1) Visit github.com and navigate to the repository you wish to clone</p>
+					<p>2) Locate the button as shown in the image to the right</p>
+				</div>
+				<img src="https-clone-img.png" alt="https cloning sc">
 			</div>
 		</div>
 	</div>
