Finished formatting and content for lesson 4

--- a/index.html
+++ b/index.html
@@ -261,6 +261,8 @@
 					<p>In order to sucessfully clone a repository, follow these steps:</p>
 					<p>1) Visit github.com and navigate to the repository you wish to clone</p>
 					<p>2) Locate the button as shown in the image to the right</p>
+					<p>3) Make sure you are in the directory where you wish to store your local copy</p>
+					<p>4) Preceded by [git clone], enter the url into the command line and hit enter</p>
 				</div>
 				<img src="https-clone-img.png" alt="https cloning sc">
 			</div>
