Finished lesson 5 content and formatting

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 	</div>
 
 	<div class="lesson4 lessons" id="lesson4">
-		<div class="lessonparameter2">
+		<div class="lessonparameter2 lessonparameter">
 			<h2>4</h2>
 			<h3>Cloning the Repository</h3>
 			<p>(Create on the Github website)</p>
@@ -270,7 +270,7 @@
 	</div>
 
 	<div class="lesson5 lessons" id="lesson5">
-		<div class="lessonparameter">
+		<div class="lessonparameter3 lessonparameter">
 			<h2>5</h2>
 			<h3>Adding files to your repository</h3>
 			<p>(Add files to your local repository)</p>
@@ -280,7 +280,10 @@
 						Local repositories and git
 					</h3>
 					<p>
-						Go ahead and open up your web browser, and visit the <a href="https://www.github.com">Github Website</a>. Create a new account, and then proceed to create a new repository. Be sure to name it according to the convention <em>username.github.io</em>, so that you will be able to host your site on the web.
+						Compared to other competing version control systems, git differs in a few minor ways. Among these differences is the way git handles locally stored snippets of code- there exists a clear dinstinction between local and remote code.
+					</p>
+					<p>
+					When you clone an online repository, you are creating a local copy of all files contained in the repository. The significance in this is realizing the distinction- and from that understanding how to properly manage a locally store repo. As a result of this structure, it is essential to keep your local copy up to date at all times so that it can be easily pushed back up to the online repository. The way to make sure of this is to execute the command <strong>git pull</strong> from the command line.
 					</p>
 				</div>
 			</div>
@@ -295,10 +298,10 @@
 			<div class="gitpushcontain">
 				<div class="gitpushdivs">
 					<h3>
-						Getting started on Github
+						Commands to know
 					</h3>
 					<p>
-						Go ahead and open up your web browser, and visit the <a href="https://www.github.com">Github Website</a>. Create a new account, and then proceed to create a new repository. Be sure to name it according to the convention <em>username.github.io</em>, so that you will be able to host your site on the web.
+						If you wish to pick on this easily, it is absolutely essential to keep in mind what is actually going on rather than mindelessly typing in commands. That said, let us continue  onward with a brief explanation of the commands one must know in order to push from the command line.
 					</p>
 				</div>
 			</div>
