Added most of lesson 6 content

--- a/index.html
+++ b/index.html
@@ -304,6 +304,12 @@
 						If you wish to pick on this easily, it is absolutely essential to keep in mind what is actually going on rather than mindelessly typing in commands. That said, let us continue  onward with a brief explanation of the commands one must know in order to push from the command line.
 					</p>
 				</div>
+				<div class="commandslist">
+					<p>git status: Git status is a quick and easy way to understand what state your local repository is in as compared to the online repository</p>
+					<p>git add: Git add includes a file in the staging area, so that it can be commited</p>
+					<p>git commit: Git commit takes a "snapshot" of the repository in the condition that it is in</p>
+					<p>git push: Git push transfers all commits and changes to the online repository</p>
+				</div>
 			</div>
 		</div>
 	</div>
