Finished content, working on responsive design

--- a/index.html
+++ b/index.html
@@ -320,15 +320,16 @@
 	</div>
 
 	<footer>
-		<nav class="footernav">
-			<ul>
-				<li><a href="https://github.com/michaeltnoronha" class="findongithub">Find me on GitHub</a></li>
-				<li><a href="mailto:micaheltnoronha@gmail.com?Subject=Hello%20there" target="_top"  class="emailme">
-Send me an email</a></li>
-				<li class="phonenumber">Phone number: (847) 708 1864</li>
-				<li><a href="#">This links somewhere</a></li>
-			</ul>
-		</nav>
+		<div id="contact" class="maincontentdiv contact">
+    <h2>Contact Information:</h2>
+    <div class="emailbutton">
+        <a href="mailto:michaeltnoronha@gmail.com"><img src="https://raw.github.com/michaeltnoronha/michaeltnoronha.github.io/master/email.png" alt="gmail logo"/>Send Michael an Email</a>
+    </div>
+    	<p>Call me at: (847)-708-1864</p>
+    <div class="gitbutton">
+        <a class="gitcontactbutton" href="https://github.com/michaeltnoronha"><img src="https://raw.github.com/michaeltnoronha/michaeltnoronha.github.io/master/github_logo.png" alt="github logo" />Find me on Github</a>
+    </div>
+</div>       
 	</footer>
 </section>
 </body>
