--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 					<p>3) Make sure you are in the directory where you wish to store your local copy</p>
 					<p>4) Preceded by [git clone], enter the url into the command line and hit enter</p>
 				</div>
-				<img src="https-clone-img.PNG" alt="https cloning image">
+				<img src="https://raw.github.com/michaeltnoronha/git_tutorial/gh-pages/https-clone-img.PNG" alt="https cloning image">
 			</div>
 		</div>
 	</div>
