--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 						Commands to know
 					</h3>
 					<p>
-						If you wish to pick on this easily, it is absolutely essential to keep in mind what is actually going on rather than mindelessly typing in commands. That said, let us continue  onward with a brief explanation of the commands one must know in order to push from the command line.
+						If you wish to pick on this easily, it is absolutely essential to keep in mind what is actually going on rather than mindlessly typing in commands. That said, let us continue  onward with a brief explanation of the commands one must know in order to push from the command line.
 					</p>
 				</div>
 				<div class="commandslist">
