--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			<h2>How long will it take<br>to complete the lessons on this site?</h2>
 			<div class="faqcontstraint">
 				<p>
-					The amount of time required to comlete this site can vary greatly, as different users come in with different amounts of prior knowledge. In general, it is important to progress through the lessons at a slow pace so as to make sure you fully understand the information presented. Put simply, take your time.
+					The amount of time required to complete this site can vary greatly, as different users come in with different amounts of prior knowledge. In general, it is important to progress through the lessons at a slow pace so as to make sure you fully understand the information presented. Put simply, take your time.
 				</p>
 			</div>
 		</div>
