Added ASCII art git logo

--- a/index.html
+++ b/index.html
@@ -17,6 +17,48 @@
  \        /\  ___/|  |__\___ (  <_> )  Y Y  \  ___/   |  | (  <_> ) \    \_\  \  ||  |  
   \__/\  /  \___  >____/____  >____/|__|_|  /\___  >  |__|  \____/   \______  /__||__|  
        \/       \/          \/            \/     \/                         \/           -->
+
+       <!-- 
+
+MMMMMMMMMMMMMMMMMMMMMMMMMM7777777MMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMN777777777MMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMM7777777777777MMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMO777777777777777DMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMD7777777777777777MMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMM7MMMMM7777777777777777ZMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMM7778MMMMM7777777777777777MMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMM7777777MMMMM77777777777777777MMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMN777777777$MMMMMMMM8777777777777MMMMMMMMMMMMMMM
+MMMMMMMMMMMM7777777777777MMMMMMMMM7777777777777MMMMMMMMMMMMM
+MMMMMMMMMMZ77777777777777MMMMMMMMM77777777777777DMMMMMMMMMMM
+MMMMMMMMM7777777777777777MMMMMMMMM7777777777777777MMMMMMMMMM
+MMMMMMM7777777777777777777MMMMMMMMMI777777777777777ZMMMMMMMM
+MMMMMM7777777777777777777777MMMMMMMMM7777777777777777MMMMMMM
+MMMM777777777777777777777777MMMM7MMMMM77777777777777777MMMMM
+MMN7777777777777777777777777MMMM77ZMMMMM7777777777777777NMMM
+M777777777777777777777777777MMMM7777MMMMMMMMM7777777777777MM
+7777777777777777777777777777MMMM777777MMMMMMMM7777777777777M
+7777777777777777777777777777MMMM77777ZMMMMMMMMM7777777777777
+7777777777777777777777777777MMMM777777MMMMMMMM8777777777777M
+M777777777777777777777777777MMMM7777777MMMMMMM777777777777MM
+MMM7777777777777777777777777MMMM777777777DN$777777777777DMMM
+MMMM777777777777777777777777MMMM77777777777777777777777MMMMM
+MMMMMM7777777777777777777777MMMM777777777777777777777MMMMMMM
+MMMMMMMZ777777777777777777OMMMMMM7777777777777777777MMMMMMMM
+MMMMMMMMM7777777777777777DMMMMMMMM7777777777777777MMMMMMMMMM
+MMMMMMMMMMD77777777777777MMMMMMMMM77777777777777OMMMMMMMMMMM
+MMMMMMMMMMMM7777777777777MMMMMMMMM7777777777777MMMMMMMMMMMMM
+MMMMMMMMMMMMMM777777777777MMMMMMM777777777777NMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMM7777777777777$OZ7777777777777MMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMM7777777777777777777777777MMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMZ7777777777777777777777MMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMI777777777777777777MMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMD7777777777777778MMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMM7777777777777MMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMM777777777NMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMM$777777MMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMN7DMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+                                             GlassGiant.com-->
 	<div class="fixednav">
 		<div class="header">
 			<header>Git for absolute beginners</header>
