Removed branding from ascii art

--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@ MMMMMMMMMMMMMMMMMMMMMD7777777777777778MMMMMMMMMMMMMMMMMMMMMM
 MMMMMMMMMMMMMMMMMMMMMMM7777777777777MMMMMMMMMMMMMMMMMMMMMMMM
 MMMMMMMMMMMMMMMMMMMMMMMMM777777777NMMMMMMMMMMMMMMMMMMMMMMMMM
 MMMMMMMMMMMMMMMMMMMMMMMMMM$777777MMMMMMMMMMMMMMMMMMMMMMMMMMM
-MMMMMMMMMMMMMMMMMMMMMMMMMMMMN7DMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
-                                             GlassGiant.com-->
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMN7DMMMMMMMMMMMMMMMMMMMMMMMMMMMMM-->
 	<div class="fixednav">
 		<div class="header">
 			<header>Git for absolute beginners</header>
